[project]
name = "bssl-integrations"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Dmytro Tkachenko", email = "itsme@somespecial.one" }]
keywords = []
classifiers = []

dependencies = [
    "bssl>=1.0.0a0",
]

[project.urls]
Homepage = "https://github.com/somespecialone/bssl-integrations"
Documentation = "https://github.com/somespecialone/bssl-integrations"
Repository = "https://github.com/somespecialone/bssl-integrations/"
"Bug Tracker" = "https://github.com/somespecialone/bssl-integrations/issues"

[dependency-groups]
dev = [
    "aiohttp>=3.13.0",
    "aiohttp-socks>=0.10.1",
    "httpx[http2,socks]>=0.28.1",
]

[tool.black]
line-length = 120

[tool.uv.build-backend]
module-name = "bssl_integrations"
module-root = ""

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
