[project]
name = "bssl-integrations"
version = "1.0.0a0"
description = "BSSL project integration with existing http clients"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Dmytro Tkachenko", email = "itsme@somespecial.one" }]
keywords = ["bssl", "boringssl", "tls", "http", "aiohttp", "httpx"]
classifiers = [
    "Programming Language :: Python",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Development Status :: 3 - Alpha",
]

dependencies = [
    "bssl>=1.0.0a0",
]

[project.urls]
Homepage = "https://github.com/somespecialone/bssl-integrations"
Documentation = "https://github.com/somespecialone/bssl-integrations"
Repository = "https://github.com/somespecialone/bssl-integrations/"
"Bug Tracker" = "https://github.com/somespecialone/bssl-integrations/issues"

[dependency-groups]
dev = [
    "aiohttp>=3.13.0",
    "aiohttp-socks>=0.10.1",
    "httpx[http2,socks]>=0.28.1",
]

[tool.black]
line-length = 120

[tool.uv.build-backend]
module-name = "bssl_integrations"
module-root = ""

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
